--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -765,10 +765,6 @@ p {
                 .holder_list_container .sub-title {
                     padding-left: 0;
                 }
-
-                .holder_item__container {
-                    margin-left: -12px;
-                }
             }
         }
     }
